--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.8.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.6",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
