--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "heroku": "^7.7.8",
