--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.1.0",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
     "multer-s3": "^2.10.0",
