--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ config/dev.js
 package-lock.json
 dev.js
 .env
-config/educado-399008-c718daa031b8.json
+config/educado-*.json
 config/gcp_service.json
 config/keys.js
