--- a/Dockerfile.nodejs
+++ b/Dockerfile.nodejs
@@ -14,7 +14,7 @@ RUN npm install
 COPY . .
 
 # Expose the port your Express.js server will listen on
-EXPOSE 3000
+EXPOSE 8888
 
 # Define the command to start your Express.js application
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
