--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@babel/preset-env": "^7.3.4",
     "babel-jest": "^24.4.0",
     "jest": "^29.1.2",
-    "mongodb-memory-server": "^8.9.3"
+    "mongodb-memory-server": "^8.9.3",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "verbose": true,
