--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.6",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
