--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ajv-formats": "^2.1.1",
     "aws-sdk": "^2.1083.0",
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.10",
     "cli": "^1.0.1",
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
@@ -42,7 +43,8 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.6",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
