--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 node_modules
 config/dev.js
-config/gcp_service.json
 *.DS_Store
 package-lock.json
 dev.js
@@ -8,7 +7,4 @@ dev.js
 # enviroment
 .env
 .env.*
-config/educado-*.json
-config/gcp_service.json
-config/keys.js
-__tests__/setup/globalConfigMongo.json
+config/*.json
