Updated scripts to automatically set NODE_ENV

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "test": "jest --runInBand",
-    "dev": "npm run server",
-    "prod": "npm run server",
+    "dev": "NODE_ENV=development npm run server",
+    "staging": "NODE_ENV=staging npm run server",
+    "prod": "NODE_ENV=production npm run server",
     "docker": "docker-compose up -d",
     "docker_down": "docker-compose down",
     "docker_build": "docker-compose up -d --build",
