--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 node_modules
 config/dev.js
+config/gcp_service.json
 *.DS_Store
 package-lock.json
 dev.js
+
+# enviroment
+.env
+.env.*
+config/educado-*.json
+config/gcp_service.json
+__tests__/setup/globalConfigMongo.json
