--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "jest --runInBand --forceExit",
+    "test": "jest --runInBand",
     "dev": "npm run server",
     "prod": "npm run server",
     "docker": "docker-compose up -d",
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.5",
+    "eslint": "^8.50.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
@@ -42,6 +43,7 @@
     "nodemon": "^2.0.6",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "prettier": "^3.0.3",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
@@ -50,8 +52,9 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4",
     "babel-jest": "^24.4.0",
-    "jest": "^29.7.0",
-    "mongodb-memory-server": "^8.9.3"
+    "jest": "^29.1.2",
+    "mongodb-memory-server": "^8.9.3",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "verbose": true,
