test: Tests added for email helper and authRoutes
Changes mads:
  - Added tests for different outcomes of password reset request
  - Added tests for different outcomes of password reset
  - Added documentation/comments for routes and functions added in last commit
  - Removed helpers from ignore patterns in package.json
  - Tested sendResetPasswordEmail and sendMail from email test
  - Removed leftover console.logs

--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "verbose": true,
     "modulePathIgnorePatterns": [
       "<rootDir>/__tests__/fixtures",
-      "<rootDir>/__tests__/helpers",
-      "<rootDir>/__tests__/setup"
+      "<rootDir>/__tests__/setup",
+      "<rootDir>/__tests__/helpers/timeout.js"
     ],
     "globalSetup": "<rootDir>/__tests__/setup/jest-setup.js",
     "globalTeardown": "<rootDir>/__tests__/setup/jest-teardown.js",
