--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "ejs": "^3.1.5",
     "eslint": "^8.50.0",
     "express": "^4.17.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "http-proxy-middleware": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^10.2.0",
@@ -49,8 +51,8 @@
     "nodemon": "^2.0.6",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "supertest": "^6.3.3",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
