--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.3.2",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "aws-sdk": "^2.1083.0",
