Small fixes after merge

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "test": "jest --runInBand",
-    "dev": "cross-env NODE_ENV=development npm run server",
-    "staging": "cross-env NODE_ENV=staging npm run server",
-    "prod": "cross-env NODE_ENV=production npm run server",
+    "dev": "set NODE_ENV=development && npm run server",
+    "staging": "set NODE_ENV=staging && npm run server",
+    "prod": "set NODE_ENV=production && npm run server",
     "docker": "docker-compose up -d",
     "docker_down": "docker-compose down",
     "docker_build": "docker-compose up -d --build",
