--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -2,11 +2,10 @@ name: Linting
 
 on:
   pull_request:
-    branches:
-      - main
-      - staging
-      - dev
-      - Cert
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
