--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "aws-sdk": "^2.1083.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
     "cli": "^1.0.1",
     "concurrently": "^5.3.0",
@@ -37,6 +38,7 @@
     "ejs": "^3.1.5",
     "eslint": "^8.50.0",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.1.0",
