--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "aws-sdk": "^2.1083.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
+    "busboy": "^1.6.0",
     "cli": "^1.0.1",
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
@@ -40,13 +41,13 @@
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.3",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^5.13.20",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.6",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.0.3",
