test and linting, rip

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "docker_down": "docker-compose down",
     "docker_build": "docker-compose up -d --build",
     "docker_clean_db": "docker-compose down && docker volume rm educado-backend_mongodb_data && docker-compose up -d --build mongodb",
-    "linting": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "linting": "eslint --ext .js,.jsx,.ts,.tsx . --fix",
     "typechecking": "tsc --noEmit"
   },
   "author": "",
