--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -1,38 +1,32 @@
-name: Linting
-
+name: Run Linting on Pull Request and Branches
 on:
   pull_request:
     types:
       - opened
-      - synchronize
-      - reopened
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
-#Run npm run linting
+  push:
+    branches:
+      - dev
+      - staging
+      - main
+      - staging_withLinting
 jobs:
-  lint:
-    name: 🧹 Lint
+  eslint:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          node-version: 14
+      
+      - name: List directories and files
+        run: ls -al
 
-      - name: npm install, build
-        run: |
-          npm install
-          npm run build --if-present
+      - name: Install dependencies
+        run: npm install
 
-      - name: Linting
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
+      - name: Run ESLint
+        run: npm run linting
