--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -3,12 +3,8 @@ on:
   pull_request:
     types:
       - opened
-  push:
-    branches:
-      - dev
-      - staging
-      - main
-      - staging_withLinting
+      - synchronize
+      - reopened
 jobs:
   eslint:
     runs-on: ubuntu-latest
