--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "docker_down": "docker-compose down",
     "docker_build": "docker-compose up -d --build",
     "docker_clean_db": "docker-compose down && docker volume rm educado-backend_mongodb_data && docker-compose up -d --build mongodb",
-    "linting": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
     "typechecking": "tsc --noEmit"
   },
   "author": "",
@@ -30,24 +31,23 @@
     "aws-sdk": "^2.1083.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
-    "busboy": "^1.6.0",
     "cli": "^1.0.1",
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.5",
-    "eslint": "^8.50.0",
+    "eslint": "^8.54.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.3",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.1.0",
     "mongoose": "^5.13.20",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.2",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.8.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "^2.0.6",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.0.3",
