--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "aws-sdk": "^2.1083.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
+    "choco": "^0.2.1",
     "cli": "^1.0.1",
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
