--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.5",
-    "eslint": "^8.54.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.3",
@@ -61,11 +60,16 @@
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4",
+    "@eslint/js": "^9.11.0",
     "babel-jest": "^24.4.0",
     "cross-env": "^7.0.3",
+    "eslint": "^9.11.0",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
     "jest": "^29.1.2",
     "mongodb-memory-server": "^8.9.3",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "typescript-eslint": "^8.6.0"
   },
   "jest": {
     "verbose": true,
