--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "aws-sdk": "^2.1083.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
-    "choco": "^0.2.1",
     "cli": "^1.0.1",
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.5",
+    "eslint": "^8.54.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.3",
@@ -48,11 +48,9 @@
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.6",
-    "nvm": "^0.0.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.0.3",
-    "server": "file:",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
@@ -60,16 +58,11 @@
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4",
-    "@eslint/js": "^9.11.0",
     "babel-jest": "^24.4.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.11.0",
-    "eslint-plugin-react": "^7.36.1",
-    "globals": "^15.9.0",
     "jest": "^29.1.2",
     "mongodb-memory-server": "^8.9.3",
-    "supertest": "^6.3.3",
-    "typescript-eslint": "^8.6.0"
+    "supertest": "^6.3.3"
   },
   "jest": {
     "verbose": true,
