--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 node_modules
 config/dev.js
 config/educado-*.json
-config/gcp_service.json
+config/gcp_services.json
+
 
 *.DS_Store
 dev.js
@@ -16,3 +17,4 @@ config/educado-*.json
 config/gcp_service.json
 __tests__/setup/globalConfigMongo.json
 _temp_bucketFiles
+gcp_service.json
