--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.6",
+    "openai": "^4.68.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.0.3",
