--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4",
+    "@types/jest": "^29.5.14",
     "babel-jest": "^24.4.0",
     "cross-env": "^7.0.3",
     "jest": "^29.1.2",
