301 Rating and feedback (#180)
* added feedback model and changed rating to be a long so we can represent floats when calculating averages

* actaully export feedback model

* added initial feedback endpoint

* Refactor errorCodes.js and feedbackHelpers.js

- Refactor errorCodes.js to add a new error code for "No Feedback found".
- Refactor feedbackHelpers.js to update the rating calculation and feedback options handling.

* Updated feedbackHelpers, added single unit test to test functionality and correctness of sending feedback.
Started working on feedbackOptions and implementing the correct schema.

Co-authored-by: Nicklas Vistoft Kleemann <NicklasKleemann@users.noreply.github.com>

* updated new Date() to Date.now()

* Commiting this before I make too many changes. Progress on submitting feedback, specifically updating course info for now

* Able to connect to frontend

* latest change

* feedback be saved now!

* implemented rating logic

* Hehe xd xd

* removed unused, unimplemented function

* Added feedback router tests and refactored some assertions and error handling. WIP.

Co-authored-by: Nicklas Vistoft Kleemann <NicklasKleemann@users.noreply.github.com>

* Refactor feedback options variable names and collection names

- Renamed the variable 'fakeFeedBackOptions' to 'fakeFeedbackOptions' in the courseRoutes.test.js and feedbackRoutes.test.js files.
- Updated the collection names from 'feedbackOptions' to 'feedbackoptions' in the courseRoutes.test.js and feedbackRoutes.test.js files.
- Removed unused import statement in feedbackHelpers.js.
- Cleaned up unnecessary comments and console logs.

* fixed asserts

* Updated error handling to be more informative

* removed stupid comments :)

* updated errorcodes

* New logic for updated rating and updated Courses Model to contain numOfRating, rather than counting the amount of feedbacks in Db

* Updated test fixtures to reflect numOfRatings

* Added route to

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.0.3",
+    "server": "file:",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
