--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ejs": "^3.1.5",
     "eslint": "^8.54.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.4.1",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
