--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.0.3",
-    "server": "file:",
-    "supertest": "^6.3.3"
+    "server": "file:"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -65,9 +64,9 @@
     "@types/jest": "^29.5.14",
     "babel-jest": "^24.4.0",
     "cross-env": "^7.0.3",
-    "jest": "^29.1.2",
+    "jest": "^29.7.0",
     "mongodb-memory-server": "^8.9.3",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   },
   "jest": {
     "verbose": true,
