--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "ejs": "^3.1.5",
     "eslint": "^8.54.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.4.1",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.1.0",
     "mongoose": "^5.13.20",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.6",
@@ -52,7 +53,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.0.3",
-    "server": "file:",
+    "server": "file:", 
     "supertest": "^6.3.3"
   },
   "devDependencies": {
@@ -64,9 +65,9 @@
     "@types/jest": "^29.5.14",
     "babel-jest": "^24.4.0",
     "cross-env": "^7.0.3",
-    "jest": "^29.1.2",
+    "jest": "^29.7.0",
     "mongodb-memory-server": "^8.9.3",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   },
   "jest": {
     "verbose": true,
